# galarm

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CNAME  INSTALL  Makefile.am  README  README.md  TODO  autogen.sh  config.h.cmake  configure  configure.in  galarmrc.example  index.html  style.css
pixmaps/: CMakeLists.txt  Makefile.am
sounds/: CMakeLists.txt  Makefile.am
src/: CMakeLists.txt  Makefile.am  galarm_config.c  galarm_config.h  global.h  main.c
